Fix unnecessary CSS complexity and missing gap between form groups with footnotes

--- a/webroot/css/form.scss
+++ b/webroot/css/form.scss
@@ -41,17 +41,6 @@
     margin-bottom: 2em;
 }
 
-.input-with-footnote {
-    .form-group,
-    .input-group {
-        margin-bottom: 0;
-    }
-
-    .footnote {
-        margin-bottom: 2rem;
-    }
-}
-
 form {
     .footnote {
         margin-bottom: 0;
